tests/NormalTests/paczka1/fuzzy1/39023581.err
Error in line 1: jDsw6 A934 59,5
Error in line 5: rKM4OOy8p8 S703 59,5
Error in line 9: rKM4OOy8p8 A934 25,1
Error in line 14: TUwlIA300I22,6
Error in line 12: TUwl S73 46,8
Error in line 22: bwyrO9Beva S703 484,31
Error in line 23: jDsw6 A300 19,78
Error in line 18: rKM4OOy8p8 S703 18,5
Error in line 27: rKM4OOy8p8 S72 44,9
Error in line 31: iIXRnkO3 A300 313,3
